--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </style>
   <title>AGI 2023 Group 8 Project Page</title>
   <link data-trunk rel="tailwind-css" href="styles/input.css">
-  <!-- <link data-trunk rel="copy-dir" href="img"> -->
+  <link data-trunk rel="copy-dir" href="img">
 </head>
 
 </html>
